Fixed some spacing in the masthead part.

--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -9,6 +9,7 @@
     margin: 16px;
     position: absolute;
     color: #ffffff;
+    width: 100%;
 }
 
 .masthead__container > img {
@@ -22,7 +23,7 @@
     border: none;
     color: #ffffff;
     margin-inline-start: 148px;
-    margin-block-start: -32px;
+    margin-block-start: -16px;
     text-transform: uppercase;
     font-weight: bold;
 }
@@ -35,7 +36,7 @@
 
 .masthead__link::before {
     content: url("../img/menu.svg");
-    margin-inline-end: -32px;
+    margin-inline-end: -15px;
     margin-inline-start: 16px;
     margin-block-start: 0px;
 }
